# boblib

./: .gitignore  CMakeLists.txt  bint.h  bstr.c  bstr.h  main.c  os.c  os.h  sw.h
assert/: bassert.h
bmath/: mat.c  mat.h
cpu/: cpuinfo.c  cpuinfo.h
hstr/: hstr.c  hstr.h
mem/: mem.c  mem.h  memcopy.c  memcopy.h
osio/: io_numtohstr.c  io_numtohstr.h  osio.c  osio.h
rnd/: rnd.c  rnd.h
